more details and comments

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <h1>To win this Fuji bike</h1>
     <h1>Start the servey</h1>
     <form action="index.php" name="Fuji Bike" method=""POST>
+        <!--name section-->
+        <h1>What is your name</h1>
         First Name:<input type="text" name="First Name"><br>
         Last Name:<input type="text" name="Last Name"><br>
+        <!--Female or male section-->
+        <h1>Are you a Female or Male</h1>
+        <input type="radio" name="sex" value="female">Female<br>
+        <input type="radio" name="sex" value="Male">Male<br>
+
+
     </form>
 </body>
 </html>
