--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
         <h3>What is your name</h3>
         First Name:<input type="text" name="First Name"><br>
         Last Name:<input type="text" name="Last Name"><br>
+
         <!--Female or male section-->
         <h3>Are you a Female or Male</h3>
         <input type="radio" name="sex" value="female">Female<br>
         <input type="radio" name="sex" value="Male">Male<br>
+
+        <!--Bike size section-->
+        <h3>What is your bike Size</h3>
+        <input type="radio" name="Small" value="Small">Small<br>
+        <input type="radio" name="Medium" value="Medium">Medium<br>
+        <input type="radio" name="Large" value="Large">Large<br>
+
+        
+
+
+
 
 
     </form>
