--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
         <input type="radio" name="Medium" value="Medium">Medium<br>
         <input type="radio" name="Large" value="Large">Large<br>
 
-        
+        <!--Do you already own a bike-->
+        <h3>Do you already own a Fuji bike</h3>
+        <input type="radio" name="Yes" value="female">Yes<br>
+        <input type="radio" name="No" value="No">No<br>
+
+        <!--How do you know our brand-->
+        <h3>How do you know our brand</h3>
+        <input type="radio" name="Friend recommendation" value="Small">Friend<br>
+        <input type="radio" name="From an instagram Add" value="insta">Medium<br>
+        <input type="radio" name="Saw your store in Ottawa" value="Store">Large<br>
+        <input type="radio" name="Other" value="Large">Other<br>
+
+        <!--Tell us more about yourself-->
+        <h3>Tell us more about yourself and why you want to win this bike</h3>
+        Comments:<br>
+            <textarea rows="7" cols="40"/>
+
+
+
 
 
 
