--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
 
     <!--background color-->
-    
+    <style>
+
+        body {
+
+            background:rgb(27, 83, 213) ;
+
+        }
+
+    </style>
 
 
     <meta charset="UTF-8">
@@ -53,6 +61,11 @@
         <h3>Tell us more about yourself and why you want to win this bike</h3>
         Comments:<br>
             <textarea rows="7" cols="40"/>
+
+        <!--Submit Button -->
+        <h3>Are you ready to submit the questionnaire?</h3>    
+        <input type="submit" value="Enter to Win" />
+
 
 
 
